merge r27480 (use valueOf instead of new for primitive types) from trunk to x10-2.4.2 branch
git-svn-id: svn://svn.code.sf.net/p/x10/code/branches/x10-2.4.2@27481 a326200e-df2c-42e0-81fa-597e909af41d